--- a/index.html
+++ b/index.html
@@ -227,6 +227,15 @@
             <a href="https://www.youtube.com/@kryptoholik6193/videos" class="link-button" target="_blank">
                 <i class="fab fa-youtube"></i> YouTube Channel
             </a>
+            <!-- Add new Resume button here -->
+            <a href="https://mega.nz/file/M44iFRTK#PUUSRa6WDgn7058yEMk-3dOhbgdCO9jTDDhWyWbn8_U" class="link-button" target="_blank">
+            <i class="fas fa-file-pdf"></i> My Resume
+            </a>
+    
+            <!-- Add new E-Book button here -->
+            <a href="https://mega.nz/file/A9AAXISI#jBs_nhMo5mRpyO9jmpZE4jtGVMbS_WZo4EHedh7KJAs" class="link-button" target="_blank">
+            <i class="fas fa-book"></i> Kryptopigula E-BOOK ver_2023
+            </a>
         </div>
         <div class="chart-container">
             <canvas id="portfolioChart"></canvas>
