link change, price change
Added new buttons for Resume and E-Book links to the webpage.

--- a/index.html
+++ b/index.html
@@ -237,7 +237,7 @@
             <i class="fas fa-book"></i> Kryptopigula E-BOOK ver_2023
             </a>
             <!-- Add new Resume button here -->
-            <a href="https://kryptpit.eu" class="link-button" target="_blank">
+            <a href="https://kryptpit.com" class="link-button" target="_blank">
             <i class="fas fa-calculator"></i> Kryptopit.eu - kalkulator podatkowy
             </a>
         </div>
@@ -296,7 +296,7 @@
           <script>
           // Portfolio data (modify these values as needed)
           const portfolioData = {
-              labels: ['3/2020', '3/2021', '7/2021', '11/2021', '11/2023', '4/2025'],
+              labels: ['3/2020', '3/2021', '7/2021', '11/2021', '11/2023', '4/2025', '3/2026'],
               datasets: [{
                   label: 'Price (BTC)',
                   data: [5600, 58110, 29700, 60525, 16700, 104256],
@@ -378,3 +378,4 @@
     </script>
 </body>
 </html>
+
