--- a/index.html
+++ b/index.html
@@ -238,7 +238,7 @@
             </a>
             <!-- Add new Resume button here -->
             <a href="https://kryptpit.com" class="link-button" target="_blank">
-            <i class="fas fa-calculator"></i> Kryptopit.eu - kalkulator podatkowy
+            <i class="fas fa-calculator"></i> Kryptopit.com - kalkulator podatkowy
             </a>
         </div>
         <div class="chart-container">
@@ -296,10 +296,10 @@
           <script>
           // Portfolio data (modify these values as needed)
           const portfolioData = {
-              labels: ['3/2020', '3/2021', '7/2021', '11/2021', '11/2023', '4/2025', '3/2026'],
+              labels: ['3/2020', '3/2021', '7/2021', '11/2021', '11/2023', '4/2025','3/2026'],
               datasets: [{
                   label: 'Price (BTC)',
-                  data: [5600, 58110, 29700, 60525, 16700, 104256],
+                  data: [5600, 58110, 29700, 60525, 16700, 104256, 67342],
                   borderColor: '#6a11cb',
                   backgroundColor: createGradient('#6a11cb', '#2575fc'),
                   borderWidth: 2,
@@ -378,4 +378,5 @@
     </script>
 </body>
 </html>
+
 
