--- a/index.html
+++ b/index.html
@@ -237,7 +237,7 @@
             <i class="fas fa-book"></i> Kryptopigula E-BOOK ver_2023
             </a>
             <!-- Add new Resume button here -->
-            <a href="https://kryptpit.com" class="link-button" target="_blank">
+            <a href="https://kryptopit.com" class="link-button" target="_blank">
             <i class="fas fa-calculator"></i> Kryptopit.com - kalkulator podatkowy
             </a>
         </div>
@@ -378,5 +378,6 @@
     </script>
 </body>
 </html>
+
 
 
