--- a/index.html
+++ b/index.html
@@ -228,7 +228,7 @@
                 <i class="fab fa-youtube"></i> YouTube Channel
             </a>
             <!-- Add new Resume button here -->
-            <a href="https://mega.nz/file/B4QXSLoK#F5MvCbNHS3J7BbXCBrepF6TqLFmP-eni5v1A14VKlIU" class="link-button" target="_blank">
+            <a href="https://mega.nz/file/lsRzRLoT#s6hsEmBhmzGKVdCPm4z0ym5ZauigBiO9sDtepLttn9g" class="link-button" target="_blank">
             <i class="fas fa-file-pdf"></i> My Resume
             </a>
     
@@ -378,6 +378,7 @@
     </script>
 </body>
 </html>
+
 
 
 
